<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item
        style="@style/AppTheme"
        android:id="@+id/Home"
        android:title="@string/menu"
        app:showAsAction="ifRoom"
        android:orderInCategory="0"></item>

    <item
        style="@style/AppTheme"
        android:id="@+id/Pizza"
        android:title="@string/pizza"
        app:showAsAction="always"
        android:orderInCategory="1"
    ></item>

    <item
        style="@style/AppTheme"
        android:id="@+id/name"
        android:title="@string/name"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        ></item>

    <item
        style="@style/AppTheme"
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"
        android:orderInCategory="3"
        ></item>




</menu>