<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
    <Spinner
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:prompt="@string/title"
        >
    </Spinner>
    <EditText
        android:id="@+id/clientname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/clientname"/>

    <EditText
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/city"/>
        </LinearLayout>

    <EditText
        android:id="@+id/cardnumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/creditcard"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/cvc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLength="3"
        android:hint="@string/cvc"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/confirm"
        android:text="@string/confirm"/>
</LinearLayout>