<?xml version="1.0" encoding="utf-8"?>
<!--Created by Andrew McGuire n01121995-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/background">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ToolbarTheme"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        />

    <FrameLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/gino"
        android:layout_gravity="center"
        />
    </FrameLayout>
    <!--Regular Pizza-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/regular"
        android:textColor="@color/menucolor"/>

    <Button
        android:id="@+id/regularButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        />

    </LinearLayout>

    <!--Deluxe Pizza-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Deluxe"
        android:textColor="@color/menucolor"/>

    <Button
        android:id="@+id/deluxButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"

        />

    </LinearLayout>

    <!--Wings-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Wings"
        android:textColor="@color/menucolor"/>

    <Button
        android:id="@+id/wingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        />
    </LinearLayout>

    <!--Specials-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deal"
        android:textColor="@color/menucolor"/>

    <Button
        android:id="@+id/specialButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order"
        />
    </LinearLayout>


    <!--Drinks-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinks"
            android:textColor="@color/menucolor"/>

        <Button
            android:id="@+id/drinksButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            />
    </LinearLayout>

    <Button
        android:id="@+id/final_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/finalize_order"
        android:layout_gravity="right"/>

</LinearLayout>


